--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 pre-commit==3.5.0
 
 # code formatters and linters
-flake8==6.1.0
+flake8==5.0.4
 flake8-blind-except==0.2.1
 flake8-broken-line==0.6.0
 flake8-bugbear==22.9.23
@@ -34,3 +34,6 @@ psycopg2-binary==2.9
 
 # Django packages
 django==4.2.5
+
+# Environmental variables
+python-dotenv==1.0.0
