--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ psycopg2-binary==2.9
 
 # Django packages
 django==4.2.5
+django-split-settings==1.2.0
 
 # Environmental variables
 python-dotenv==1.0.0
