--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,13 @@
 [flake8]
 per-file-ignores =
+  base.py:A003,VNE003
+  film_work_entry.py:A003,VNE003
   test_*.py: S101,DAR101,D100
+  */migrations/*:Q000,C812
+  models.py:CCE001,A003,VNE003,Q003
+  manage.py:Q003,C812
+  data_migration.py:VNE001,CCR001
+max-line-length=120
+
+[isort]
+line_length=120
