--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ per-file-ignores =
   */migrations/*:Q000,C812
   models.py:CCE001,A003,VNE003,Q003
   manage.py:Q003,C812
-  data_migration.py:VNE001,CCR001
+  data_migration.py:VNE001,CCR001,C815
 max-line-length=120
 
 [isort]
