--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ per-file-ignores =
   models.py:CCE001,A003,VNE003,Q003
   manage.py:Q003,C812
   data_migration.py:VNE001,CCR001,C815
+  test_consistency.py:CCR001,C815,VNE001
 max-line-length=120
 
 [isort]
