--- a/setup.cfg
+++ b/setup.cfg
@@ -6,8 +6,10 @@ per-file-ignores =
   */migrations/*:Q000,C812
   models.py:CCE001,A003,VNE003,Q003
   manage.py:Q003,C812
-  data_migration.py:VNE001,CCR001,C815
+  data_migration.py:VNE001,CCR001,C815,I001,I005
   test_consistency.py:CCR001,C815,VNE001
+  */__init__.py:F401
+extend-ignore=I004
 max-line-length=120
 
 [isort]
