Fake migrations applied to fix table naming difference between backend and database

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ per-file-ignores =
   film_work_entry.py:A003,VNE003
   test_*.py: S101,DAR101,D100
   */migrations/*:Q000,C812
-  models.py:CCE001,A003,VNE003,Q003
+  models.py:CCE001,A003,VNE003,Q003,Q000
   manage.py:Q003,C812
   data_migration.py:VNE001,CCR001,C815,I001,I005
   test_consistency.py:CCR001,C815,VNE001
