Dockerfile updated with group and user access

--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -4,6 +4,8 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /application
+RUN groupadd -r developers && useradd -d /application -r -g developers developer \
+    && chown developer:developers -R /application
 COPY requirements.txt /application
 
 RUN pip install --no-cache-dir -r requirements.txt
