--- a/source/Dockerfile
+++ b/source/Dockerfile
@@ -4,6 +4,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /application
+# Ограничение доступа к папке с кодовой базой
 RUN groupadd -r developers && useradd -d /application -r -g developers developer \
     && chown developer:developers -R /application
 COPY requirements.txt /application
