--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: ./source
-    command: python manage.py runserver 0.0.0.0:8000
+    command: uwsgi --module=config.wsgi --http :8000
     volumes:
       - ./source:/application
     ports:
