--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: ./source
-    command: uwsgi --module=config.wsgi --http :8000
+    command: uwsgi --ini uwsgi.ini
     volumes:
       - ./source:/application
     ports:
