--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
+.env*
 .venv
 env/
 venv/
@@ -135,3 +135,9 @@ dmypy.json
 
 # Working fales
 fake_data.py
+
+# Static files
+source/staticfiles
+
+# Docker files for local development
+docker-compose.dev.yml
