logging added to settings.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ per-file-ignores =
   data_migration.py:VNE001,CCR001,C815,I001,I005
   test_consistency.py:CCR001,C815,VNE001
   */__init__.py:F401
-extend-ignore=I004
+extend-ignore=I004,C812
 max-line-length=120
 
 [isort]
