--- a/source/requirements.txt
+++ b/source/requirements.txt
@@ -36,6 +36,7 @@ psycopg2-binary==2.9
 django==4.2.5
 django-split-settings==1.2.0
 django-debug-toolbar==4.2.0
+django-cors-headers==4.3.0
 
 # Environmental variables
 python-dotenv==1.0.0
