--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,22 @@ version: '3.8'
 services:
   postgres:
     image: postgres:13
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     environment:
-      POSTGRES_PASSWORD: 123qwe
-      POSTGRES_USER: app
-      POSTGRES_DB: movies_database
+      - 'POSTGRES_PASSWORD=$DB_PASSWORD'
+      - 'POSTGRES_USER=$DB_USER'
+      - 'POSTGRES_DB=&DB_NAME'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    env_file: source/config/.env
   web:
     build: ./source
     command: bash -c "python manage.py migrate
                       && python manage.py collectstatic --no-input
                       && uwsgi --ini uwsgi.ini"
     volumes:
-      - static_volume:/application/staticfiles:ro
+      - static_volume:/application/staticfiles
     expose:
       - "8000"
     depends_on:
@@ -28,11 +29,11 @@ services:
     volumes:
       - ./source/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./source/nginx_configs:/etc/nginx/conf.d:ro
-      - static_volume:/application/staticfiles:ro
+      - static_volume:/application/staticfiles
     depends_on:
       - web
     ports:
-      - "80:80"
+      - "8000:80"
 
 volumes:
   postgres_data:
